[package]
name = "os-rust"
version = "0.1.0"
edition = "2021"
authors = ["Song Khoi   <songkhoi123@gmail.com>"]

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-nostartfiles"]

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-args=/ENTRY:_start /SUBSYSTEM:console"]

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-args=-e __start -static -nostartfiles"]

[dependencies]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
